--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,7 @@
     "es2021": true,
     "node": true
   },
-  "extends": [
-    "plugin:react/recommended",
-    "airbnb",
-    "prettier",
-    "prettier/react"
-  ],
+  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -29,6 +24,8 @@
         "custom": "ignore",
         "exceptions": [""]
       }
-    ]
+    ],
+    "react/react-in-jsx-scope": "off",
+    "import/no-unresolved": "off"
   }
 }
