--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "dayjs": "^1.10.6",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
