--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#mongoDB access: {user: 'youclone',password:'uxREkqQdpydwCGuN'}
+
 # dependencies
 /node_modules
 /.pnp
