--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "dependencies": {
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "aws-sdk": "^2.958.0",
+    "crypto": "^1.0.1",
     "dayjs": "^1.10.6",
+    "mongodb": "^4.0.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "next": "11.0.1",
+    "next-connect": "^0.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
